fix(component): Fix vertical alignment of icon
affects: ak-field-radio

--- a/packages/ak-field-radio/src/styles.less
+++ b/packages/ak-field-radio/src/styles.less
@@ -64,6 +64,7 @@
   height: @full-height;
   margin: 2px;
   position: relative;
+  vertical-align: bottom;
   width: @full-width;
 }
 
